2012-11-08  Charlie Zender  <zender@uci.edu>

 	* Start GPE documentation

	* NCO 4.2.3 release procedure:
 	Changes since nco-4_2_2: GPE, ncecat fix, group atts.
	cd ~/nco;cvs tag -d nco-4_2_3;cvs tag -d nco-4_2_3-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.3 release"
	cvs tag -c nco-4_2_3;cvs tag -c nco-4_2_3-1

2012-11-08  Pedro Vicente  <pvicente@uci.edu>

	* ncks: GPE group attribute extraction

	* ncks regression test #30: GPE group attribute extraction

2012-11-07  Pedro Vicente  <pvicente@uci.edu>

	* ncks: nco_att_cpy_trv: Copy group attributes

2012-11-06  Pedro Vicente  <pvicente@uci.edu>

	* ncks: Handle GPE redundancy

2012-11-05  Charlie Zender  <zender@uci.edu>

	* ncks/ncecat: Complete and test GPE infrastructure

	* ncecat: Fix 4.2.2 bug that skips first input file in RECORD_AGGREGATE mode with NINTAP

2012-11-05  Pedro Vicente  <pvicente@uci.edu>

	* ncks regression test #29: Extract a 'bounds' variable

2012-11-02  Pedro Vicente  <pvicente@uci.edu>

	* ncks regression test #28: Extract coordinate variables

	* ncks: nco_var_lst_crd_add_trv: Add all coordinates to extraction list

2012-11-02  Charlie Zender  <zender@uci.edu>

	* Call nco_prs_gpe_arg() to parse GPE argument into GPE structure

	* Add Group Path Editing (GPE) structures

2012-11-01  Pedro Vicente  <pvicente@uci.edu>

	* ncks regression test #26: Extract group attributes

	* ncks regression test #27: Extract global attributes

	* ncks: nco_grp_var_mk_trv: Create groups/write variables in output file

2012-10-31  Charlie Zender  <zender@uci.edu>

	* ncflint: verify output type is float when interpolating between two packed floats

2012-10-29  Charlie Zender  <zender@uci.edu>

 	* NCO 4.2.2 release procedure:
 	Changes since nco-4_2_1: ncks groups, hdr_pad, NULs, _'s, ncecat GAG
	cd ~/nco;cvs tag -d nco-4_2_2;cvs tag -d nco-4_2_2-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.2 release"
	cvs tag -c nco-4_2_2;cvs tag -c nco-4_2_2-1

2012-10-28  Pedro Vicente  <pvicente@uci.edu>
